🏗️ create-project updated script (wip)
Updated to new project standards:

- using kotlin dir, instead java, for code
- parametrized sdk and java versions
- using version catalog
- using version.properties
- compose based project (wip)